fix h1 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h1 {
 
 .hero-scroll {
   padding-top: 50vh;
-  padding-bottom: 500px;
+  padding-bottom: 50vh;
   margin: auto;
 }
 
